--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Mongoose Express React Node Application ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "client": "npm run start  --prefix client",
+    "server": "nodemon index.ts",
+    "build": "tsc -p .",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -17,13 +22,14 @@
   },
   "homepage": "https://github.com/Hayk011/WebChat_MERN_Stack#readme",
   "devDependencies": {
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.0",
-    "nodemon": "^2.0.2",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.8.3"
+    "@types/express": "4.17.3",
+    "@types/node": "13.9.0",
+    "nodemon": "2.0.2",
+    "ts-node": "8.6.2",
+    "typescript": "3.8.3"
   },
   "dependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "5.1.0",
+    "express": "4.17.1"
   }
 }
