--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "homepage": "https://github.com/Hayk011/WebChat_MERN_Stack#readme",
   "devDependencies": {
-    "@types/express": "4.17.3",
-    "@types/node": "13.9.0",
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.0",
     "nodemon": "2.0.2",
     "ts-node": "8.6.2",
-    "typescript": "3.8.3"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "concurrently": "5.1.0",
