--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/ws": "^7.2.2",
     "concurrently": "5.1.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "ws": "^7.2.3"
   }
 }
