--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/socket.io-client": "^1.4.32",
     "materialize-css": "^1.0.0-rc.2",
     "query-string": "^6.11.1",
     "react": "^16.13.0",
@@ -19,6 +20,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
