--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/socket.io": "^2.1.4",
     "@types/ws": "^7.2.2",
     "concurrently": "5.1.0",
     "express": "4.17.1",
+    "socket.io": "^2.3.0",
     "ws": "^7.2.3"
   }
 }
